[imad-console] Updates ui/article one.html

--- a/ui/article one.html
+++ b/ui/article one.html
@@ -1,2 +1,15 @@
 <HTML>
+    
+    <head>
+        <TITLE>
+       ARTICLE ONE
+        </TITLE>
+    </head>
+    <body>
+        <div>
+             <a href="/">home</a> 
+        </div>
+        
+    </body>
+
 </HTML>
